methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:21: error: not found: value couleur
    couleur = getCouleurSol() 
    ^SlugSnail:23: error: not found: value couleur
    if(getCouleurSol()==couleur){
                        ^