methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(!estSurBiscuit()){
    baisseBrosse()
  	leveBrosse()
    if (estFaceMur()){
      gauche()
    }
    if (isFacingTrail == true){
  	avance()
  	}else{
    gauche()
  	}
	}
  prendBiscuit()
  baisseBrosse()
}

def isFacingTrail():Boolean = {
   if (!estFaceMur()){
    couleur = getCouleurSol() 
   	avance()
    if(getCouleurSol()==couleur){
      recule()
      return true
    }else{
      recule()
      return false
    }
  }
  return false 
}